--- a/man/man5/zpool-features.5
+++ b/man/man5/zpool-features.5
@@ -269,7 +269,7 @@ DEPENDENCIES	lz4_compress,extensible_dataset
 .TE
 
 \fBcompress_qos\fR adds quality of service capabilities to the dataset.
-The chosen qos value limits the incoming trafic to improove simultanious writes
+The chosen qos value limits the incoming traffic to improve simultaneous writes
 into multiple datasets.
 The chosen qos value also limits the compression speed(equal to disk write speed).
 Low values will result in better compression ratio but less throughput than high values.
