--- a/man/man8/zfs.8
+++ b/man/man8/zfs.8
@@ -874,7 +874,7 @@ Changing this property affects only newly-written data.
 .sp
 .ne 2
 .na
-\fB\fBcompression\fR=\fBoff\fR | \fBon\fR | \fBlzjb\fR | \fBlz4\fR |
+\fB\fBcompression\fR=\fBoff\fR | \fBon\fR | \fBauto\fR | \fBlzjb\fR | \fBlz4\fR |
 \fBgzip\fR | \fBgzip-\fR\fIN\fR | \fBzle\fR\fR | \fBlz4fast-\fR\fIN\fR
 .ad
 .sp .6
